syntax = "proto3";

option go_package = "github.com/5imonGustafsson/grpc-iot-concept/messages";
option java_multiple_files = true;
option java_package = "5imonGustafsson.grpc-iot-concept.messages";
option java_outer_classname = "MessagesProto";

package messages;

// The iot service definition.
service IoT {
  // Sends water soil level
  rpc SendWaterSoilLevel (WaterSoilMetrics) returns (MetricsReply) {}
}

// The request message containing the user's name.
message WaterSoilMetrics {
  string device_id = 1;
  string message_id = 2;
  float moisture_level = 3;

}

// The response message containing the greetings
message MetricsReply {
  string message_id = 1;
  int32 timestamp = 2;
  int32 status_code = 3;


}